Add red highlighted text
This will visually distinguish my dev environment from non-dev
environments.

--- a/Downloads/FingertipFormulary-FormularyDataEntry-Plans-45_files/FFAdmin.css
+++ b/Downloads/FingertipFormulary-FormularyDataEntry-Plans-45_files/FFAdmin.css
@@ -1017,3 +1017,8 @@ td.editlft {
 td.editrgt {padding:5px;}
 
 .alignrgt {text-align:right;}
+
+strong {
+  color: red;
+  background-color: yellow;
+}
